--- a/b1/b1.html
+++ b/b1/b1.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Base 1</title>
 </head>
 <div id="app">
@@ -24,23 +25,31 @@
     <hr>
     <h2 v-on:mouseover="onHover">Counter-2 = {{counter2}}</h2>
     <button @click="counter2++">Counter-2 + 1</button>
-    <h2 >Counter-3 {{title}} = {{counter3}}</h2>
+    <h2>Counter-3 {{title}} = {{counter3}}</h2>
     <button @click="countermore(5, 'Counter + 5', $event)">Counter-3 + 5</button>
     <button @click="countermore(10,' Counter + 10', $event)">Counter-3 + 10</button>
     <hr>
-    <h2><a href="http://google.de" target="_blank" v-on:click.prevent>Google (disabled link)</a></h2>
-    <div @mousemove= "mouseover" > X {{x}} / Y {{y}} 
+    <h2>
+        <a href="http://google.de" target="_blank" v-on:click.prevent>Google (disabled link)</a>
+    </h2>
+    <div @mousemove="mouseover"> X {{x}} / Y {{y}}
         <div @mousemove.stop>Block disable mousemove()</div>
     </div>
     <hr>
     <div>
-        <input type="text" v-model="inputValue" >
+        <input type="text" v-model="inputValue">
         <span>{{inputValue}}</span>
     </div>
+    <hr>
+    <div>
+        <input type="text" v-model="color">
+        <input type="text" v-model="height">
 
-
-
-
+        <div class="cicle" :style="cicleClasses"></div>
+    </div>
+    <ul>
+        <li v-for= "(person, index) in people">Index: {{index+1}} Value: {{person}}</li>
+    </ul>
 
 
 </div>
@@ -61,9 +70,16 @@
                 counter2: 0,
                 title: "Counter",
                 counter3: 0,
-                x:0,
-                y:0,
-                inputValue: "Hallo"
+                x: 0,
+                y: 0,
+                inputValue: "Hallo",
+                color: "red",
+                height: "100",
+                people: [
+                    "1",
+                    "2",
+                    "3"
+                ]
             },
             methods: {
                 sayHelloArrowFuntion() {
@@ -75,22 +91,31 @@
                 counterPlus() {
                     this.counter++;
                 },
-                onHover(event){
+                onHover(event) {
                     event.target.style.color = "red";
                 },
-                countermore(num, str, event){
+                countermore(num, str, event) {
                     this.title = str;
-                    this.counter3 +=num;
+                    this.counter3 += num;
 
                     if (num === 5) {
                         event.target.style.color = "blue";
-                    }else if (num === 10) {
+                    } else if (num === 10) {
                         event.target.style.color = "orange";
                     }
                 },
-                mouseover(event){
+                mouseover(event) {
                     this.x = event.clientX;
                     this.y = event.clientY;
+                }
+            },
+            computed: {
+                
+                cicleClasses() {
+                    return {
+                        "background": this.color,
+                        "height": this.height + 'px'
+                    }
                 }
             }
         })
